[gd_scene load_steps=10 format=3 uid="uid://nrmwujjkugs6"]

[ext_resource type="Script" uid="uid://hh387x578sxx" path="res://Script/percentase.gd" id="1_mmctv"]
[ext_resource type="Texture2D" uid="uid://bhj10q1i284wi" path="res://assests/Img/BgFinish.png" id="1_ymwbd"]
[ext_resource type="FontFile" uid="uid://6gaovr1lqc67" path="res://assests/Font/Katibeh-Regular.ttf" id="2_g5gnl"]
[ext_resource type="Texture2D" uid="uid://dj5biqbf8oua7" path="res://assests/Img/Exit.png" id="2_uvmqr"]
[ext_resource type="Texture2D" uid="uid://cooykrpmhy5sv" path="res://assests/Img/refresh.png" id="3_g5gnl"]
[ext_resource type="Texture2D" uid="uid://bphb4d2huijrp" path="res://assests/Img/Play.png" id="4_mmctv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mmctv"]
bg_color = Color(0, 0.643137, 0.560784, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0.643137, 0.560784, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_387o7"]
bg_color = Color(0, 0.643137, 0.560784, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0.643137, 0.560784, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r8kcu"]
bg_color = Color(0, 0.643137, 0.560784, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0.643137, 0.560784, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Percentage" type="Node2D"]
script = ExtResource("1_mmctv")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BgFinish" type="Sprite2D" parent="CanvasLayer"]
texture_filter = 1
position = Vector2(655, 357)
scale = Vector2(0.119051, 0.253348)
texture = ExtResource("1_ymwbd")

[node name="Result" type="Label" parent="CanvasLayer"]
offset_left = 539.0
offset_top = 297.0
offset_right = 782.0
offset_bottom = 422.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_g5gnl")
theme_override_font_sizes/font_size = 124
text = "100%"

[node name="Level" type="Label" parent="CanvasLayer"]
offset_left = 583.0
offset_top = 202.0
offset_right = 726.0
offset_bottom = 257.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_g5gnl")
theme_override_font_sizes/font_size = 54
text = "Level 1-1"

[node name="All_level_complete" type="Label" parent="CanvasLayer"]
offset_left = 472.0
offset_top = 547.0
offset_right = 844.0
offset_bottom = 590.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_g5gnl")
theme_override_font_sizes/font_size = 42
text = "Congrats Complete All Level"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
offset_left = 466.0
offset_top = 397.0
offset_right = 616.0
offset_bottom = 445.0
scale = Vector2(2.5, 2.5)
theme_override_constants/separation = 10

[node name="Exit" type="Button" parent="CanvasLayer/HBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_icons/icon = ExtResource("2_uvmqr")
theme_override_styles/normal = SubResource("StyleBoxFlat_mmctv")
keep_pressed_outside = true

[node name="Restart" type="Button" parent="CanvasLayer/HBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_icons/icon = ExtResource("3_g5gnl")
theme_override_styles/normal = SubResource("StyleBoxFlat_387o7")

[node name="PlayAgain" type="Button" parent="CanvasLayer/HBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_icons/icon = ExtResource("4_mmctv")
theme_override_styles/normal = SubResource("StyleBoxFlat_r8kcu")

[connection signal="pressed" from="CanvasLayer/HBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/PlayAgain" to="." method="_on_play_again_pressed"]
